# dataplane

./: .$design.drawio.bkp  .$design.svg.bkp  .$kernel.drawio.bkp  .$notes.drawio.svg.bkp  .$packet-manipulation.drawio.svg.bkp  .$science.drawio.bkp  .$science.drawio.dtmp  .$testin.drawio.svg.bkp  .$theory.drawio.bkp  .clangd  .commitlintrc.yaml  .envrc  .envrc.old  .gitattributes  .gitignore  .pinact.yaml  .semgrepignore  .sysroot-man  .sysroot-static  .tsan-suppressions.txt  CLAUDE.md  Cargo.toml  Containerfile  Dockerfile  Makefile  NOTICE  README.md  acked-vulns.toml  acked2.toml  acks.toml  bf.cfg  biscuit  biscuit.toml  clippy.toml  codebook.toml  compile-env  current-situation.drawio  default.copy.nix  default.nix  deny.toml  (+41 more)
acl/: Cargo.toml
acl-dpdk/: Cargo.toml
acl-dpdk/examples/: basic_classification.rs  dpdk_classification.rs
acl-dpdk/src/: classifier.rs  compiler.rs  field_map.rs  input.rs  lib.rs  rule_translate.rs
acl-dpdk/tests/: dpdk_acl_3field_debug.rs  dpdk_acl_bolero.rs  dpdk_acl_boundary.rs  dpdk_acl_classify.rs  dpdk_acl_facade.rs  dpdk_acl_minimal.rs  dpdk_acl_property.rs  dpdk_acl_signatures.rs
acl-dpdk/tests/common/: mod.rs
acl-filter/: Cargo.toml
acl-filter/src/: access.rs  context.rs  display.rs  lib.rs  tests.rs
acl/benches/: dpdk_five_tuple.rs  reference_five_tuple.rs  table_build.rs
acl/docs/: classifier-concurrency.md  compiler-passes.md  crate-structure.md  design-analysis.md  dpdk-acl-input.md  executive-summary.md  flow-entry-analysis.md  flow-entry-concurrency.mmd  flow-filter-migration.md  nic-profiling.md  plan-clean.md  plan-round2.md  priority-model.md  switch-domains.md  tc-flower-assessment.md  two-tier-classification.md  type-space-idea.md  type-space.mmd  update-decision.mmd  update-implementation-plan.md  update-sequence.mmd  update-type-mapping.mmd
acl/src/: action.rs  builder.rs  cascade.rs  category.rs  classifier.rs  classify.rs  example.dot  generators.rs  ir.rs  layers.rs  lib.rs  manager.rs  match_expr.rs  match_fields.rs  metadata.rs  overlap.rs  pipeline.rs  priority.rs  range.rs  rule.rs  scratch.rs  scratch_dag.rs  scratch_next.rs  signature.rs  table.rs  test_support.rs  types.rs  update.rs
acl/src/backends/: dpdk.rs  mod.rs
acl/src/dpdk/: dyn_table.rs  install.rs  layout.rs  lookup.rs  mod.rs  rule.rs
acl/src/reference/: dyn_table.rs  mod.rs  table.rs
acl/tests/: classifier.rs  eal_classify_via_projection.rs  eal_install_classify.rs  metadata_projection.rs  net_field_types.rs  property_dyn_shape.rs  property_predicate.rs  property_tests.rs
args/: Cargo.toml
args/src/: lib.rs
cascade/: Cargo.toml
cascade/src/: absorb.rs  cascade.rs  diff_buffer.rs  generation.rs  head.rs  layer.rs  lib.rs  merge.rs  property_tests.rs  upsert.rs
cascade/tests/: absorb_properties.rs  acl_consumer.rs  smoke.rs  subscribe.rs  upsert_properties.rs
cascade/tests/common/: mod.rs
cli/: Cargo.toml  build.rs
cli/src/: cliproto.rs  iocache.rs  lib.rs
concurrency/: Cargo.toml  QUIESCENT.md  build.rs
concurrency-macros/: Cargo.toml
concurrency-macros/src/: lib.rs
concurrency/src/: lib.rs  macros.rs  quiescent.rs  slot.rs  stress.rs
concurrency/src/slot/: fallback.rs  mod.rs  standard.rs
concurrency/src/sync/: default_backend.rs  loom_backend.rs  mod.rs  parking_lot_backend.rs  shuttle_backend.rs  std_backend.rs  test_facade.rs
concurrency/src/thread/: loom_scope.rs  mod.rs
concurrency/tests/: arc_weak.rs  quiescent_loom.rs  quiescent_model.rs  quiescent_properties.rs  quiescent_protocol.rs  quiescent_shuttle.rs  scope_property.rs  stress_dispatch.rs  thread_scope.rs
config/: Cargo.toml
config/src/: display.rs  errors.rs  gwconfig.rs  lib.rs
config/src/converters/: mod.rs  strings.rs
config/src/internal/: mod.rs
config/src/utils/: collapse.rs  mod.rs  overlap.rs
dataplane/: .$design.drawio.bkp  .$design.drawio.dtmp  Cargo.toml  build.rs
dataplane/src/: args.rs  config.rs  id.rs  lib.rs  main.rs  manager.rs  message.rs  nat.rs  packet.rs  packet_hash.rs  packet_meta.rs  packet_test_utils.rs  pipeline.rs  runtime.rs  suppress.txt  work_queue.rs  worker.rs
dpdk/: Cargo.toml
dpdk-sys/: Cargo.toml  build.rs
dpdk-sys/gen-sysroot/: Dockerfile  debug-mode.env  gen-sysroot.sh  release-mode.env
dpdk-sys/src/: dpdk.h  lib.rs  main.rs  rte_errno.c
dpdk-test-macros/: Cargo.toml
dpdk-test-macros/src/: lib.rs
dpdk-thin/: Cargo.toml
dpdk-thin/src/: dev.rs  eal.rs  lib.rs  socket.rs
dpdk/benches/: micro.rs
dpdk/src/: dev.rs  eal.rs  lcore.rs  lib.rs  mem.rs  mvcc.rs  scratch.rs  socket.rs  test_support.rs
dpdk/src/acl/: config.rs  (+14 more)
errno/: Cargo.toml  build.rs
errno/src/: lib.rs
fixin/: Cargo.toml
fixin/src/: lib.rs
flofi/: Cargo.toml  README.md
flofi/docs/: two-table-redesign.md
flofi/src/: lib.rs  test_utils.rs  tests.rs
flow-entry/: Cargo.toml
flow-entry/src/: lib.rs
flow-filter/: Cargo.toml  README.md
flow-filter/src/: display.rs  filter_rw.rs  fuzz_gen.rs  ip_port_prefix_trie.rs  lib.rs  setup.rs  tables.rs  test_utils.rs  tests.rs
flow-info/: Cargo.toml
flow-info/src/: flow_info.rs  flow_info_item.rs  lib.rs
flow-test/: Cargo.toml
flow-test/src/: bridge.rs  device.rs  endpoint.rs  error.rs  fuzz.rs  harness.rs  lib.rs  meta.rs  pcap.rs  tcp_flow.rs  tcp_state.rs  time.rs
hardware/: Cargo.toml  README.md  build.rs
hardware/src/: group.rs  lib.rs  scan.rs  support.rs
host-gateway/: Cargo.toml
host-gateway/src/: main.rs
id/: Cargo.toml
id/src/: lib.rs
init/: Cargo.toml
init/src/: main.rs  nic.rs  sysfs.rs
interface-manager/: Cargo.toml  build.rs
interface-manager/src/: actor.rs  interface.rs  lib.rs  manager.rs  message.rs  name.rs  netns.rs  reconcile.rs  resource.rs  schedule.rs  subscribe.rs
intergration-fixtures/: Cargo.toml
intergration-fixtures/examples/: otlp.rs  py.rs  py_with_log.rs
intergration-fixtures/src/: frr.rs  ip.rs  lib.rs  loopback.rs  machine.rs  nic.rs
intergration-fixtures/tests/: otlp.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
k8s-intf/: Cargo.toml  build.rs
k8s-intf/src/: client.rs  lib.rs  utils.rs
(+1122 files in other folders)
