[workspace]

members = [
	"dataplane",
	"dpdk",
	"dpdk-sys",
	"dpdk-sysroot-helper",
	"errno",
	"id",
	"interface-manager",
	"net",
	"routing",
	"routing2",
]

resolver = "3"

[workspace.dependencies]

# Internal
dpdk = { path = "./dpdk" }
dpdk-sys = { path = "./dpdk-sys" }
dpdk-sysroot-helper = { path = "./dpdk-sysroot-helper" }
dplane-rpc = { git = "https://github.com/githedgehog/dplane-rpc.git", branch = "master" }
errno = { path = "./errno", package = "dataplane-errno" }
id = { path = "./id", package = "dataplane-id" }
interface-manager = { path = "./interface-manager", package = "dataplane-interface-manager" }
net = { path = "./net" }
routing = { path = "./routing" }

# External
arbitrary = { version = "1.4.1", default-features = false, features = [] }
arrayvec = { version = "0.7.6", default-features = false, features = [] }
bindgen = { version = "0.71.1", default-features = false, features = [] }
bolero = { version = "0.13.0", default-features = false, features = [] }
bytes = { version = "1.10.0", default-features = false, features = [] }
clap = { version = "4.5.31", default-features = false, features = ["std"] } # std feature currently globally required for clap
ctrlc = { version = "3.4.5", default-features = false, features = [] }
derive_builder = { version = "0.20.2", default-features = false, features = ["default"] }
diff-struct = { version = "0.5.3", features = ["default"] }
doxygen-rs = { version = "0.4.2", default-features = false, features = [] }
dyn-iter = { version = "1.0.1", default-features = false, features = [] }
etherparse = { version = "0.17.0", default-features = false, features = [] }
futures = { version = "0.3.31", default-features = false, features = [] }
ipnet = { version = "2.11.0", default-features = false, features = [] }
iptrie = { version = "0.10.2", default-features = false, features = [] }
left-right = { version = "0.11.5", default-features = false, features = [] }
mio = { version = "1.0.3", default-features = false, features = [] }
multi_index_map = { version = "0.11.0", default-features = false, features = [] }
netlink-packet-route = { git = "https://github.com/rust-netlink/netlink-packet-route.git", default-features = false, features = [] }
netlink-sys = { git = "https://github.com/rust-netlink/netlink-sys.git", default-features = false, features = [] }
nix = { version = "0.29.0", features = ["sched", "fs"] }
rtnetlink = { git = "https://github.com/rust-netlink/rtnetlink.git", default-features = false, features = [] }
serde = { version = "1.0.219", default-features = false, features = [] }
serde_yml = { version = "0.0.12", default-features = false, features = [] }
slab = { version = "0.4.9", default-features = false, features = [] }
thiserror = { version = "2.0.12", default-features = false, features = [] }
tokio = { version = "1.44.1", default-features = false, features = [] }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] } # attribute feature is so commonly used that we should just leave it on globally
tracing-subscriber = { version = "0.3.19", default-features = false, features = [] }
tracing-test = { version = "0.2.5", default-features = false, features = [] }
uuid = { version = "1.16.0", default-features = false, features = [] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[profile.fuzz]
inherits = "release"
opt-level = 3
panic = "unwind"
debug = "full"
lto = "off"
debug-assertions = true
overflow-checks = true
codegen-units = 1
rpath = true
