[workspace]

members = [
	"cli",
	"dataplane",
	"dpdk",
	"dpdk-sys",
	"dpdk-sysroot-helper",
	"errno",
	"id",
	"interface-manager",
	"intergration-fixtures",
	"mgmt",
	"net",
	"pipeline",
	"rekon",
	"routing",
	"test-utils",
	"test-utils-macros",
]

resolver = "3"

[workspace.dependencies]

# Internal
cli = { path = "./cli", package = "dataplane-cli", features = [] }
dpdk = { path = "./dpdk", package = "dataplane-dpdk" }
dpdk-sys = { path = "./dpdk-sys", package = "dataplane-dpdk-sys" }
dpdk-sysroot-helper = { path = "./dpdk-sysroot-helper", package = "dataplane-dpdk-sysroot-helper" }
dplane-rpc = { git = "https://github.com/githedgehog/dplane-rpc.git", version = "1.0.0" }
errno = { path = "./errno", package = "dataplane-errno" }
gateway_config = { git = "https://github.com/githedgehog/gateway-proto", version = "0.2.0" }
id = { path = "./id", package = "dataplane-id" }
integration-fixtures = { path = "./intergration-fixtures" }
interface-manager = { path = "./interface-manager", package = "dataplane-interface-manager" }
mgmt = { path = "./mgmt", package = "dataplane-mgmt" }
net = { path = "./net", package = "dataplane-net", features = ["test_buffer"] }
pipeline = { path = "./pipeline", package = "dataplane-pipeline" }
rekon = { path = "./rekon", package = "dataplane-rekon" }
routing = { path = "./routing", package = "dataplane-routing" }
test-utils = { path = "./test-utils", package = "dataplane-test-utils" }

# External
afpacket = { version = "0.2.3", default-features = false, features = [] }
ahash = { git = "https://github.com/tkaitchuck/aHash", rev = "5587f60d8ed16fb503267fed185156ed0f680918", default-features = false, features = ["no-rng"] }
arbitrary = { version = "1.4.1", default-features = false, features = [] }
arc-swap = { version = "1.7.1", default-features = false, features = [] }
arrayvec = { version = "0.7.6", default-features = false, features = [] }
async-trait = { version = "0.1", default-features = false, features = [] }
bindgen = { version = "0.71.1", default-features = false, features = [] }
bolero = { version = "0.13.3", default-features = false, features = [] }
bollard = { version = "0.19.0", default-features = false, features = [] }
bytes = { version = "1.10.1", default-features = false, features = [] }
caps = { version = "0.5.5", default-features = false, features = [] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
clap = { version = "4.5.38", default-features = true, features = [] }
ctrlc = { version = "3.4.7", default-features = false, features = [] }
derive_builder = { version = "0.20.2", default-features = false, features = ["default"] }
doxygen-bindgen = { version = "0.1.3", default-features = false, features = [] }
dyn-iter = { version = "1.0.1", default-features = false, features = [] }
etherparse = { version = "0.18.0", default-features = false, features = [] }
futures = { version = "0.3.31", default-features = false, features = [] }
futures-util = { version = "0.3.31", default-features = false, features = [] }
ipnet = { version = "2.11.0", default-features = false, features = [] }
iptrie = { version = "0.10.3", default-features = false, features = [] }
mio = { version = "1.0.3", default-features = false, features = [] }
multi_index_map = { version = "0.13.0", default-features = false, features = [] }
netdev = { version = "0.34.0", default-features = false, features = [] }
nix = { version = "0.30.1", default-features = false, features = ["socket"] }
ordermap = { version = "0.5.7", default-features = false, features = [] }
proc-macro-error2 = { version = "2.0.1", default-features = false, features = [] }
quote = { version = "1.0.40", default-features = false, features = [] }
rtnetlink = { version = "0.16.0", default-features = false, features = [] }
rustyline = { version = "15.0.0", default-features = false, features = [] }
serde = { version = "1.0.219", default-features = false, features = [] }
serde_yml = { version = "0.0.12", default-features = false, features = [] }
strum = { version = "0.27", default-features = false, features = ["derive"] }
syn = { version = "2.0.101", default-features = false, features = [] }
thiserror = { version = "2.0.12", default-features = false, features = [] }
tokio = { version = "1.45.0", default-features = false, features = [] }
tokio-stream = { version = "0.1", default-features = false, features = [] }
tonic = { version = "0.13", default-features = false, features = [] }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] } # attribute feature is so commonly used that we should just leave it on globally
tracing-subscriber = { version = "0.3.19", default-features = false, features = [] }
tracing-test = { version = "0.2.5", default-features = false, features = [] }
uuid = { version = "1.16.0", default-features = false, features = [] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[profile.fuzz]
inherits = "release"
opt-level = 3
panic = "unwind"
debug = "full"
lto = "off"
debug-assertions = true
overflow-checks = true
codegen-units = 1
rpath = true
