[workspace]

members = [
    "args",
    "cli",
    "concurrency",
    "concurrency-macros",
    "config",
    "dataplane",
    "dpdk",
    "dpdk-sys",
    "dpdk-sysroot-helper",
    "errno",
    "flow-entry",
    "flow-filter",
    "flow-info",
    "hardware",
    "id",
    "init",
    "interface-manager",
    "k8s-intf",
    "k8s-less",
    "left-right-tlcache",
    "mgmt",
    "nat",
    "net",
    "pipeline",
    "rekon",
    "routing",
    "stats",
    "sysfs",
    "test-utils",
    "tracectl",
    "validator",
    "vpcmap",
]

resolver = "3"

[workspace.package]
version = "0.11.0"
edition = "2024"
license = "Apache-2.0"
publish = false
repository = "https://github.com/githedgehog/dataplane/"

[workspace.dependencies]

# Internal
args = { path = "./args", package = "dataplane-args", features = [] }
cli = { path = "./cli", package = "dataplane-cli", features = [] }
concurrency = { path = "./concurrency", package = "dataplane-concurrency", features = [] }
concurrency-macros = { path = "./concurrency-macros", package = "dataplane-concurrency-macros", features = [] }
config = { path = "./config", package = "dataplane-config", features = [] }
dpdk = { path = "./dpdk", package = "dataplane-dpdk", features = [] }
dpdk-sys = { path = "./dpdk-sys", package = "dataplane-dpdk-sys", features = [] }
dpdk-sysroot-helper = { path = "./dpdk-sysroot-helper", package = "dataplane-dpdk-sysroot-helper", features = [] }
dplane-rpc = { git = "https://github.com/githedgehog/dplane-rpc.git", rev = "e8fc33db10e1d00785f2a2b90cbadcad7900f200", features = [] }
errno = { path = "./errno", package = "dataplane-errno", features = [] }
flow-entry = { path = "./flow-entry", package = "dataplane-flow-entry", features = [] }
flow-filter = { path = "./flow-filter", package = "dataplane-flow-filter", features = [] }
flow-info = { path = "./flow-info", package = "dataplane-flow-info", features = [] }
hardware = { path = "./hardware", package = "dataplane-hardware", features = [] }
id = { path = "./id", package = "dataplane-id", features = [] }
init = { path = "./init", package = "dataplane-init", features = [] }
interface-manager = { path = "./interface-manager", package = "dataplane-interface-manager", features = [] }
k8s-intf = { path = "./k8s-intf", package = "dataplane-k8s-intf", features = [] }
k8s-less = { path = "./k8s-less", package = "dataplane-k8s-less", features = [] }
left-right-tlcache = { path = "./left-right-tlcache", package = "dataplane-left-right-tlcache", features = [] }
lpm = { path = "./lpm", package = "dataplane-lpm", features = [] }
mgmt = { path = "./mgmt", package = "dataplane-mgmt", features = [] }
nat = { path = "./nat", package = "dataplane-nat", features = [] }
net = { path = "./net", package = "dataplane-net", features = [] }
pipeline = { path = "./pipeline", package = "dataplane-pipeline", features = [] }
rekon = { path = "./rekon", package = "dataplane-rekon", features = [] }
routing = { path = "./routing", package = "dataplane-routing", features = [] }
stats = { path = "./stats", package = "dataplane-stats", features = [] }
sysfs = { path = "./sysfs", package = "dataplane-sysfs", features = [] }
test-utils = { path = "./test-utils", package = "dataplane-test-utils", features = [] }
tracectl = { path = "./tracectl", package = "dataplane-tracectl", features = [] }
validator = { path = "./validator", package = "dataplane-validator", features = [] }
vpcmap = { path = "./vpcmap", package = "dataplane-vpcmap", features = [] }

# External
afpacket = { version = "0.2.3", default-features = false, features = [] }
ahash = { version = "0.8.12", default-features = false, features = [] }
arc-swap = { version = "1.8.2", default-features = false, features = [] }
anyhow = { version = "1.0.101", default-features = false, features = ["std"] }
arrayvec = { version = "0.7.6", default-features = false, features = [] }
async-trait = { version = "0.1.89", default-features = false, features = [] }
atomic-instant-full = { version = "0.1.1", default-features = false, features = [] }
axum = { version = "0.8.8", default-features = false, features = [] }
axum-server = { version = "0.8.0", default-features = false, features = [] }
bincode2 = { version = "2.0.1", default-features = false, features = [] } # TODO: try to remove this
bindgen = { version = "0.72.1", default-features = false, features = [] }
bitflags = { version = "2.11.0", default-features = false, features = [] }
bnum = { version = "0.13.0", default-features = false, features = [] }
bolero = { version = "0.13.4", default-features = false, features = [] }
bytecheck = { version = "0.8.2", default-features = false, features = [] }
bytes = { version = "1.11.1", default-features = false, features = [] }
caps = { version = "0.5.6", default-features = false, features = [] }
chrono = { version = "0.4.43", default-features = false, features = [] }
clap = { version = "4.5.58", default-features = true, features = [] }
color-eyre = { version = "0.6.5", default-features = false, features = [] }
colored = { version = "3.1.1", default-features = false, features = [] }
ctrlc = { version = "3.5.2", default-features = false, features = [] }
dashmap = { version = "6.1.0", default-features = false, features = [] }
derive_builder = { version = "0.20.2", default-features = false, features = [] }
dotenvy = { version = "0.15.7", default-features = false, features = [] }
downcast-rs = { version = "2.0.2", default-features = false, features = [] }
doxygen-bindgen = { version = "0.1.3", default-features = false, features = [] }
dyn-iter = { version = "1.0.1", default-features = false, features = [] }
etherparse = { version = "0.19.0", default-features = false, features = [] }
fixin = { git = "https://github.com/githedgehog/fixin", branch = "main", features = [] }
futures = { version = "0.3.32", default-features = false, features = [] }
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
hashbrown = { version = "0.16.1", default-features = false, features = [] }
hwlocality = { version = "1.0.0-alpha.11", default-features = false, features = [] }
hyper = { version = "1.8.1", default-features = false, features = [] }
hyper-util = { version = "0.1.20", default-features = false, features = [] }
inotify = { version = "0.11.0", default-features = false, features = [] }
ipnet = { version = "2.11.0", default-features = false, features = [] }
k8s-openapi = { version = "0.27.0", default-features = false, features = [] }
kanal = { version = "0.1.1", default-features = false, features = [] }
kube = { version = "3.0.1", default-features = false, features = [] }
kube-core = { version = "3.0.1", default-features = false, features = [] }
left-right = { version = "0.11.7", default-features = false, features = [] }
libc = { version = "1.0.0-alpha.3", default-features = false, features = [] }
linkme = { version = "0.3.35", default-features = false, features = [] }
linux-raw-sys = { version = "0.12.1", default-features = false, features = [] }
log = { version = "0.4.29", default-features = false, features = [] } # TODO: try to remove this
loom = { version = "0.7.2", default-features = false, features = [] }
memmap2 = { version = "0.9.10", default-features = false, features = [] }
metrics = { version = "0.24.3", default-features = false, features = [] }
metrics-exporter-prometheus = { version = "0.18.1", default-features = false, features = [] }
miette = { version = "7.6.0", default-features = false, features = [] }
mio = { version = "1.1.1", default-features = false, features = [] }
multi_index_map = { version = "0.15.1", default-features = false, features = [] }
n-vm = { git = "https://github.com/githedgehog/testn.git", tag = "v0.0.9", default-features = false, features = [], package = "n-vm" }
netdev = { version = "0.40.0", default-features = false, features = [] }
nix = { version = "0.31.1", default-features = false, features = [] }
netgauze-bgp-pkt = { version = "0.9.3", features = [] } 
netgauze-bmp-pkt = { version = "0.9.3", features = ["codec"] }
num-derive = { version = "0.4.2", default-features = false, features = [] }
num-traits = { version = "0.2.19", default-features = false, features = [] }
once_cell = { version = "1.21.3", default-features = false, features = [] }
ordermap = { version = "1.1.0", default-features = false, features = [] }
parking_lot = { version = "0.12.5", default-features = false, features = [] }
pci-ids = { version = "0.2.6", default-features = false, features = [] }
prefix-trie = { version = "0.8.1", default-features = false, features = [] }
pretty_assertions = { version = "1.4.1", default-features = false, features = [] }
priority-queue = { version = "2.7.0", default-features = false, features = [] }
proc-macro2 = { version = "1.0.106", default-features = false, features = [] }
procfs = { version = "0.18.0", default-features = false, features = [] }
pyroscope = { version = "0.5.8", default-features = false, features = [] }
pyroscope_pprofrs = { version = "0.2.10", default-features = false, features = [] }
quote = { version = "1.0.44", default-features = false, features = [] }
rand = { version = "0.10.0", default-features = false, features = [] }
rapidhash = { version = "4.3.0", default-features = false, features = [] }
rkyv = { version = "0.8.15", default-features = false, features = [] }
roaring = { version = "0.11.3", default-features = false, features = [] }
rtnetlink = { git = "https://github.com/githedgehog/rtnetlink.git", branch = "hh/tc-actions3", default-features = false, features = [] }
rustls = { version = "0.23.36", default-features = false, features = [] }
rustyline = { version = "17.0.2", default-features = false, features = [] }
schemars = { version = "1", default-features = false, features = [] }
serde = { version = "1.0.228", default-features = false, features = [] }
serde_json = { version = "1.0.149", default-features = false, features = [] }
serde_yaml_ng = { version = "0.10.0", default-features = false, features = [] }
serial_test = { version = "3.3.1", default-features = false, features = [] }
sha2 = { version = "0.10.9", default-features = false, features = [] }
shuttle = { version = "0.8.1", default-features = false, features = [] }
small-map = { version = "0.1.5", default-features = false, features = [] }
static_assertions = { version = "1.1.0", default-features = false, features = [] }
strum = { version = "0.27.2", default-features = false, features = [] }
strum_macros = { version = "0.27.2", default-features = false, features = [] }
syn = { version = "2.0.116", default-features = false, features = [] }
thiserror = { version = "2.0.18", default-features = false, features = [] }
thread_local = { version = "1.1.9", default-features = false, features = [] }
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread"] }
tracing = { version = "0.1.44", default-features = false, features = [] }
tokio-util = { version = "0.7.18", default-features = false, features = ["codec"] }
tonic = { version = "0.14.4", default-features = false, features = [] }
tracing-error = { version = "0.2.1", default-features = false, features = [] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [] }
tracing-test = { version = "0.2.6", default-features = false, features = [] }
ureq = { version = "3.2.0", default-features = false, features = [] }
url = { version = "2.5.8", default-features = false, features = [] }
uuid = { version = "1.20.0", default-features = false, features = [] }

[profile.dev]
panic = "unwind"
debug-assertions = true
overflow-checks = true
debug = "full"
rpath = true

[profile.release]
opt-level = 3
panic = "unwind"
debug = "full"
lto = "thin"
debug-assertions = false
overflow-checks = false
codegen-units = 1
rpath = true

[profile.fuzz]
inherits = "release"
debug-assertions = true
overflow-checks = true
