[package]
name = "dataplane-acl-dpdk"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
acl = { workspace = true }
dpdk = { workspace = true }
etherparse = { workspace = true }
net = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
net = { workspace = true, features = ["builder"] }
