[package]
name = "dataplane-acl-dpdk"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
acl = { workspace = true }
dpdk = { workspace = true }
etherparse = { workspace = true }
net = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, features = ["std"] }
acl = { workspace = true, features = ["bolero"] }
net = { workspace = true, features = ["builder", "test_buffer"] }
