[package]
name = "dataplane-acl-filter"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
# `reference` is now a non-default feature of `acl` (the crate defaults to the
# dpdk backend). acl-filter's tables are still built on the reference backend
# during the switch to dpdk, so enable it explicitly alongside the default dpdk.
acl = { workspace = true, features = ["reference"] }
common = { workspace = true }
concurrency = { workspace = true }
config = { workspace = true }
indenter = { workspace = true }
lookup = { workspace = true }
lpm = { workspace = true }
match-action = { workspace = true, features = ["derive"] }
net = { workspace = true }
pipeline = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
config = { workspace = true, features = ["testing"] }
flow-entry = { workspace = true }
flow-filter = { workspace = true }
lpm = { workspace = true, features = ["testing"] }
nat = { workspace = true }
net = { workspace = true, features = ["builder"] }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracing-test = { workspace = true, features = [] }
