[package]
name = "dataplane-acl-filter"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
acl = { workspace = true }
common = { workspace = true }
concurrency = { workspace = true }
config = { workspace = true }
dpdk = { workspace = true }
indenter = { workspace = true }
linkme = { workspace = true }
lookup = { workspace = true }
lpm = { workspace = true }
match-action = { workspace = true, features = ["derive"] }
net = { workspace = true }
pipeline = { workspace = true }
tracectl = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# The reference (linear-scan) ACL backend is the differential-test oracle and drives the fast,
# EAL-free semantic suite. It is `cfg(test)`-gated in the source, so it is never part of a
# production build; this dev-dep just makes `acl::reference` available to test builds.
acl = { workspace = true, features = ["reference"] }
dpdk = { workspace = true, features = ["test"] }
flow-entry = { workspace = true }
flow-filter = { workspace = true }
lpm = { workspace = true, features = ["testing"] }
nat = { workspace = true }
net = { workspace = true, features = ["builder"] }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracing-test = { workspace = true, features = [] }
