[package]
name = "dataplane-acl"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = []
dpdk = ["dep:dpdk"]

[dependencies]
arrayvec = { workspace = true, default-features = true }
concurrency = { workspace = true, features = [] }
dpdk = { workspace = true, optional = true }
lookup = { workspace = true, features = [] }
match-action = { workspace = true, features = ["derive"] }
net = { workspace = true, features = [] }
thiserror = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, features = ["std"] }
criterion = { workspace = true, features = ["cargo_bench_support"] }
dpdk = { workspace = true, features = ["test"] }
match-action = { workspace = true, features = ["derive", "bolero"] }
net = { workspace = true, features = ["test_buffer", "builder"] }

[[bench]]
name = "reference_five_tuple"
harness = false

[[bench]]
name = "dpdk_five_tuple"
harness = false

[[bench]]
name = "table_build"
harness = false
