[package]
name = "dataplane-args"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
# internal
hardware = { workspace = true, features = ["serde"] }
id = { workspace = true }
net = { workspace = true }

# external
bytecheck = { workspace = true, features = [] }
clap = { workspace = true, features = ["derive", "std", "usage"] }
memmap2 = { workspace = true }
miette = { workspace = true, features = ["derive", "fancy"] }
nix = { workspace = true, features = ["fs"] }
rkyv = { workspace = true, features = ["alloc", "bytecheck", "std"] }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["std"] }
url = { workspace = true, features = ["std"] }
uuid = { workspace = true }

[dev-dependencies]
# internal
hardware = { workspace = true, features = ["serde"] }
net = { workspace = true, features = ["test_buffer"] }
# external
serde_yaml_ng = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(none)"] }
