[package]
name = "dataplane-args"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = []
bolero = ["dep:bolero", "hardware/bolero", "net/bolero"]

[dependencies]
# internal
hardware = { workspace = true, features = ["serde"] }
net = { workspace = true, features = [] }
ipc = { workspace = true, features = [] }

# optional
bolero = { workspace = true, optional = true, features = ["alloc"] }

# external
bytecheck = { workspace = true, features = [] }
clap = { workspace = true, features = ["derive", "std", "usage"] }
memmap2 = { workspace = true, features = [] }
miette = { workspace = true, features = ["derive", "fancy"] }
rkyv = { workspace = true, features = ["alloc", "bytecheck", "std"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true, features = [] }
tracing = { workspace = true, features = ["std"] }
url = { workspace = true, features = ["std", "serde"] }
uuid = { workspace = true, features = [] }

[dev-dependencies]
# internal
hardware = { workspace = true, features = ["serde", "bolero"] }
net = { workspace = true, features = ["test_buffer", "bolero"] }
# external
bolero = { workspace = true, features = ["alloc"] }
serde_yaml_ng = { workspace = true, features = [] }
tokio = { workspace = true, features = [] }
tracing = { workspace = true, features = [] }
tracing-subscriber = { workspace = true, features = ["ansi"] }
