[package]
name = "dataplane-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
autobins = false

[[bin]]
name = "cli"
path = "bin/main.rs"

[dependencies]
bincode2 = { workspace = true, features = [] }
clap = { workspace = true, features = ["derive", "std", "usage"] }
colored = { workspace = true, features = [] }
log = { workspace = true, features = ["serde"] }
rustyline = { workspace = true , features = ["with-fuzzy", "custom-bindings"] }
serde = {workspace = true, features = ["derive", "serde_derive"]}
strum = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
# internal
dpdk-sysroot-helper = { workspace = true }

# external
