[package]
name = "dataplane-cli"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[[bin]]
name = "cli"
path = "bin/main.rs"

[features]
default = []
sysroot = ["dep:dpdk-sysroot-helper"]

[dependencies]
clap = { workspace = true, features = ["derive", "std", "usage"] }
colored = "3.0.0"
bincode2 = "2.0.1"
log = { version = "^0.4.29", features = ["serde"]}
rustyline = { workspace = true , features = ["with-fuzzy", "custom-bindings"] }
serde = {workspace = true, features = ["derive", "serde_derive"]}
strum = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
# internal
dpdk-sysroot-helper = { workspace = true, optional = true }

# external
