[package]
name = "dataplane-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
autobins = false

[[bin]]
name = "cli"
path = "bin/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "std", "usage"] }
colored = { workspace = true, features = [] }
nix = { workspace = true, features = ["socket"] }
rkyv = { workspace = true, features = ["alloc", "bytecheck", "std"] }
reedline = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }


[build-dependencies]
# internal

# external
