[package]
name = "dataplane-concurrency-macros"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[lib]
proc-macro = true

[features]
loom = []
shuttle = []
silence_clippy = []

[dependencies]
syn = { workspace = true, features = ["full", "parsing", "proc-macro", "printing"] }
quote = { workspace = true, features = ["proc-macro"] }
proc-macro2 = { workspace = true }

